--- a/Maps.html
+++ b/Maps.html
@@ -33,12 +33,12 @@
     <body>
         <h1 class="titles">Maps</h1>
         <hr class="titles">
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <p>Currently in Valorant, there are seven different maps players do battle on. Each of them are set in a different location on Future Earth, have different layouts and gimmicks, and more. Here’s what you need to know about all the Valorant maps.</p>
         <hr style="width: 70%; border-top: 3px solid;" align="center">
 
         <ul class="listings four">
             <div class="map">
-                <img src="" alt="image 1">
+                <img src="Assets/bg/" alt="image 1">
                 <img src="" alt="image 1">
                 <img src="" alt="image 1">
                 <img src="" alt="image 1">
