--- a/Basic_Information.html
+++ b/Basic_Information.html
@@ -36,7 +36,7 @@
         <br>
         <p>There are two sides in the game – Attackers and Defenders. The Attackers’ job is to push a site where their objective is to plant the “Spike”. Like other “search and destroy” style shooters, if the Spike detonates, the attackers win the round. Their opponents – the Defenders – must stop the enemy team from planting the Spike at all costs.</p>
         <br>
-        <img class="main" src="Assets/basic/Beginners Guide.jpg" alt="Beginners Basic Guide">
+        <img class="main" src="Assets/basic/Beginners_Guide.jpg" alt="Beginners Basic Guide">
         <p>To win a round, teams must either wipe out their opponents, plant/defuse the spike or a combination of both. A team achieves victory after winning 13 rounds before the opposing team.</p>
         <br>
         <!--Weapons Section-->
