Formating For both Agents and Basic Info

--- a/Agent_Tips.html
+++ b/Agent_Tips.html
@@ -6,7 +6,7 @@
         <script src="Events.js"></script>
     </head>
     <nav>
-        <ul class="nav">
+        <div class="navBase">
             <div class="nav"><a href="ValorantBasic.html">Homepage</a></div>
             <div class="nav">
                 <a href="Basic_Information.html">Basic Knowledge</a>
@@ -20,7 +20,7 @@
             <div class="nav"><a href="Agent_Tips.html">Agent Tips</a></div>
             <div class="nav"><a href="Maps.html">Maps</a></div>
             <div class="nav"><a href="Patch_Notes.html">Patch Notes</a></div>
-        </ul>
+        </div>
         <div class="breadcrumbs">
             <p><a href="ValorantBasic.html">Home</a> / Agent Tips</p>
         </div>
@@ -32,20 +32,20 @@
     <body>
         <h1 class="titles" id="Agent_Tips">Agents</h1>
         <hr class="titles">
-        <ul class="listings four">
-            <div class="items">
+        <div class="">
+            <div class="Agents items">
                 <img src="Assets/role/Duelist.png" alt="Duelist">
                 <h5>Duelist</h5>
             </div>
-            <div class="items">
+            <div class="Agents items">
                 <img src="Assets/role/Controller.png" alt="Controller">
                 <h5>Controller</h5>
             </div>
-            <div class="items">
+            <div class="Agents items">
                 <img src="Assets/role/Sentinel.png" alt="Sentinel">
                 <h5>Sentinal</h5>
             </div>
-            <div class="items">
+            <div class="Agents items">
                 <img src="Assets/role/Initiator.png" alt="Initiator">
                 <h5>Initiator</h5>
             </div>
