--- a/Basic_Information.html
+++ b/Basic_Information.html
@@ -6,7 +6,7 @@
         <script src="Events.js"></script>
     </head>
     <nav>
-        <ul class="nav">
+        <div class="navBase">
             <div class="nav"><a href="ValorantBasic.html">Homepage</a></div>
             <div class="nav">
                 <a href="Basic_Information.html">Basic Knowledge</a>
@@ -20,7 +20,7 @@
             <div class="nav"><a href="Agent_Tips.html">Agent Tips</a></div>
             <div class="nav"><a href="Maps.html">Maps</a></div>
             <div class="nav"><a href="Patch_Notes.html">Patch Notes</a></div>
-        </ul>
+        </div>
         <div class="breadcrumbs">
             <p><a href="ValorantBasic.html">Home</a> / Basic Knowledge</p>
         </div>
@@ -51,22 +51,83 @@
             <h5 class="Info_Title">Arsenal</h5>   
             
             <!--Weapons Gallery-->
-            <ul class="listings four">
-                <div class="items">
-
-                    <h5>Pistol</h2>
-                    <img class ="other" src="Assets/Weapons/Classic.png" alt="Classic">
-                </div>
-                <div class="items">
-                    <h5>SMG</h2>
-                    <img class ="other" src="Assets/Weapons/Spectre.png" alt="Spectre">
-                </div>
-                <div class="items">
-                    <h5>Rifles</h2>
-                    <img class ="other" src="Assets/Weapons/Vandal.png" alt="Vandal">
-                </div>
+            <table>
+                <tr class="Arsenal">
+                    <td>
+                        <h5>Rifles</h5>
+                        <img src="Assets/Weapons/Vandal.png" alt="Vandal">
+                    </td>
+                    <td>
+                        <h5>GUN</h5>
+                        <img src="Assets/Weapons/Spectre.png" alt="Spectre">
+                    </td>
+                  </tr>
+                <tr class="Arsenal">
+                    <td>
+                        <h5>GUN</h5>
+                        <img src="Assets/Weapons/Ares.png" alt="Classic">
+                    </td>
+                    <td>
+                        <h5>Pistol</h5>
+                        <img src="Assets/Weapons/Bucky.png" alt="Classic">
+                    </td>
+                </tr>
+                <tr class="Arsenal">
+                    <td>
+                        <h5>Pistol</h5>
+                        <img src="Assets/Weapons/Ghost.png" alt="Classic">
+                    </td>
+                    <td>
+                        <h5>Pistol</h5>
+                        <img src="Assets/Weapons/Guardian.png" alt="Classic">
+                    </td>
+                </tr>
+                <tr class="Arsenal">
+                    <td>
+                        <h5>Pistol</h5>
+                        <img src="Assets/Weapons/Judge.png" alt="Classic">
+                    </td>
+                    <td>
+                        <h5>Pistol</h5>
+                        <img src="Assets/Weapons/Marshal.png" alt="Classic">
+                    </td>
+                </tr>
+                <tr class="Arsenal">
+                    <td>
+                        <h5>Pistol</h5>
+                        <img src="Assets/Weapons/Odin.png" alt="Classic">
+                    </td>
+                    <td>
+                        <h5>Pistol</h5>
+                        <img src="Assets/Weapons/Operator.png" alt="Classic">
+                    </td>
+                </tr>
+                <tr class="Arsenal">
+                    <td>
+                        <h5>Pistol</h5>
+                        <img src="Assets/Weapons/Phantom.png" alt="Classic">
+                    </td>
+                    <td>
+                        <h5>Pistol</h5>
+                        <img src="Assets/Weapons/Sheriff.png" alt="Classic">
+                    </td>
+                </tr>
+                <tr class="Arsenal">
+                    <td>
+                        <h5>Pistol</h5>
+                        <img src="Assets/Weapons/Shorty.png" alt="Classic">
+                    </td>
+                    <td>
+                        <h5>Pistol</h5>
+                        <img src="Assets/Weapons/Stinger.png" alt="Classic">
+                    </td>
+                </tr>
+                
+            </table>
         </div>
+
         <!--Economy Section-->
+
         <hr style="width: 30%; border-top: 3px solid;" align="left">
         <div id="Economy">
             <h5 class="Info_Title">Economy</h5>
