--- a/Maps.html
+++ b/Maps.html
@@ -7,7 +7,7 @@
         <script src="Events.js"></script>
     </head>
     <nav>
-        <ul class="nav">
+        <div class="navBase">
             <div class="nav"><a href="ValorantBasic.html">Homepage</a></div>
             <div class="nav">
                 <a href="Basic_Information.html">Basic Knowledge</a>
@@ -21,7 +21,7 @@
             <div class="nav"><a href="Agent_Tips.html">Agent Tips</a></div>
             <div class="nav"><a href="Maps.html">Maps</a></div>
             <div class="nav"><a href="Patch_Notes.html">Patch Notes</a></div>
-        </ul>
+        </div>
         <div class="breadcrumbs">
             <p><a href="ValorantBasic.html">Home</a> / Maps</p>
         </div>
