--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -8,7 +8,7 @@
         <script src="Events.js"></script>
     </head>
     <nav>
-        <ul class="nav">
+        <div class="navBase">
             <div class="nav"><a href="ValorantBasic.html">Homepage</a></div>
             <div class="nav">
                 <a href="Basic_Information.html">Basic Knowledge</a>
@@ -22,7 +22,7 @@
             <div class="nav"><a href="Agent_Tips.html">Agent Tips</a></div>
             <div class="nav"><a href="Maps.html">Maps</a></div>
             <div class="nav"><a href="Patch_Notes.html">Patch Notes</a></div>
-        </ul>
+        </div>
         <div class="breadcrumbs">
             <p><a href="ValorantBasic.html">Home</a> / Patch Notes</p>
         </div>
@@ -31,7 +31,7 @@
         <br>
         <img class="logo other" src="Assets/ValorantBasic_logo.png" alt="valorant basic logo">
         <br><br>
-        <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
+        <img class="others" src="Assests/bg/Beta Key Art_VALORANT.png" alt="Thumbnail">
     </header>
 
     <body>
