--- a/ValorantBasic.html
+++ b/ValorantBasic.html
@@ -8,7 +8,7 @@
         <script src="Events.js"></script>
     </head>
     <nav>
-        <ul class="nav">
+        <div class="navBase">
             <div class="nav"><a href="ValorantBasic.html">Homepage</a></div>
             <div class="nav">
                 <a href="Basic_Information.html">Basic Knowledge</a>
@@ -22,7 +22,7 @@
             <div class="nav"><a href="Agent_Tips.html">Agent Tips</a></div>
             <div class="nav"><a href="Maps.html">Maps</a></div>
             <div class="nav"><a href="Patch_Notes.html">Patch Notes</a></div>
-        </ul>
+        </div>
         <div class="breadcrumbs">
             <p>Home</p>
         </div>
