Margin of Body to Nav; Formatting of Agent Logo

--- a/Agent_Tips.html
+++ b/Agent_Tips.html
@@ -32,24 +32,24 @@
     <body>
         <h1 class="titles" id="Agent_Tips">Agents</h1>
         <hr class="titles">
-        <div class="">
+        <div class="AgentsBase">
             <div class="Agents items">
                 <img src="Assets/role/Duelist.png" alt="Duelist">
-                <h5>Duelist</h5>
+                <h5><a href="#">Duelist</a></h5>
             </div>
             <div class="Agents items">
                 <img src="Assets/role/Controller.png" alt="Controller">
-                <h5>Controller</h5>
+                <h5><a href="#">Controller</a></h5>
             </div>
             <div class="Agents items">
                 <img src="Assets/role/Sentinel.png" alt="Sentinel">
-                <h5>Sentinal</h5>
+                <h5><a href="#">Sentinal</a></h5>
             </div>
             <div class="Agents items">
                 <img src="Assets/role/Initiator.png" alt="Initiator">
-                <h5>Initiator</h5>
+                <h5><a href="#">Initiator</a></h5>
             </div>
-        </ul>
+        </div>
         <hr style="width: 70%; border-top: 3px solid;" align="center">
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
