Changes to text margins; Box shadow for agents;

--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -28,9 +28,7 @@
         </div>
     </nav>
     <header>
-        <br>
         <img class="logo other" src="Assets/ValorantBasic_logo.png" alt="valorant basic logo">
-        <br><br>
         <img class="others" src="Assests/bg/Beta Key Art_VALORANT.png" alt="Thumbnail">
     </header>
 
@@ -68,7 +66,6 @@
 
     </body>
 
-
-    <div></div>
+    <footer></footer>
 
 </html>
