--- a/ValorantBasic.html
+++ b/ValorantBasic.html
@@ -28,9 +28,7 @@
         </div>
     </nav>
     <header>
-        <br>
         <img class="logo homepage" src="Assets/ValorantBasic_logo.png" alt="valorant basic logo">
-        <br>
     </header>
     <body>
         <!--Introduction Section-->
@@ -68,7 +66,7 @@
         <!--Patch Notes Section-->
         
         <!--Trial Run on bg image-->
-        <div class="homebg" style="background-image: url(Assets/bg/L10_Sillos_Final.jpg);">
+        <div class="homebg">
             <img class="others" src="Alchemy_Star_Half_Anni.jpg" alt="Thumbnail">
             
             <h1 class="titles" id="Patch_Notes">Patch Notes</h1>
@@ -78,6 +76,6 @@
     </body>
 
 
-    <div></div>
+    <footer></footer>
 
 </html>
