--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -43,7 +43,7 @@
 
         <!--Others Section-->
         <hr style="border-top: 3px solid;">
-        <h5 class="titles" style="text-align: left; padding-left: 50px;">Others</h5>
+        <h5 class="titles" style="text-align: left; margin: 10px 20px 10px;">Others</h5>
         <hr style="width: 20%; padding-left: 40px;" align="left">
         
 
