Font; Map Format; Title class;

--- a/Maps.html
+++ b/Maps.html
@@ -35,21 +35,29 @@
         <p>Currently in Valorant, there are seven different maps players do battle on. Each of them are set in a different location on Future Earth, have different layouts and gimmicks, and more. Here’s what you need to know about all the Valorant maps.</p>
         <hr style="width: 70%; border-top: 3px solid;" align="center">
 
-        <ul class="listings four">
+        <div class="mapBase">
             <div class="map">
                 <img src="Assets/bg/" alt="image 1">
-                <img src="" alt="image 1">
-                <img src="" alt="image 1">
-                <img src="" alt="image 1">
             </div>
             <div class="map">
-                <img src="" alt="image 1">
-                <img src="" alt="image 1">
-                <img src="" alt="image 1">
+                <img src="Assets/bg/" alt="image 1">
             </div>
-
-
-        </ul>
+            <div class="map">
+                <img src="Assets/bg/" alt="image 1">
+            </div>
+            <div class="map">
+                <img src="Assets/bg/" alt="image 1">
+            </div>
+            <div class="map">
+                <img src="Assets/bg/" alt="image 1">
+            </div>
+            <div class="map">
+                <img src="Assets/bg/" alt="image 1">
+            </div>
+            <div class="map">
+                <img src="Assets/bg/" alt="image 1">
+            </div>
+        </div>
     </body>
     
     
