Arsenal Content; Patch notes button interaction

--- a/Basic_Information.html
+++ b/Basic_Information.html
@@ -49,76 +49,89 @@
             <!--Weapons Gallery-->
             <table>
                 <tr class="Arsenal">
-                    <td>
+                    <td onclick="contentChange(0)">
                         <h5>Rifles</h5>
-                        <img src="Assets/Weapons/Vandal.png" alt="Vandal">
+                        <img class="arsenalItem" src="Assets/Weapons/Vandal.png" alt="Vandal">
+                        <p class="arsenalContent"></p>
                     </td>
-                    <td>
+                    <td onclick="contentChange(1)">
                         <h5>GUN</h5>
-                        <img src="Assets/Weapons/Spectre.png" alt="Spectre">
+                        <img class="arsenalItem" src="Assets/Weapons/Spectre.png" alt="Spectre">
+                        <p class="arsenalContent"></p>
                     </td>
                   </tr>
                 <tr class="Arsenal">
-                    <td>
+                    <td onclick="contentChange(2)">
                         <h5>GUN</h5>
-                        <img src="Assets/Weapons/Ares.png" alt="Classic">
+                        <img class="arsenalItem" src="Assets/Weapons/Ares.png" alt="Classic">
+                        <p class="arsenalContent">ABCDEFGHIJKLMNOPQRSTUV</p>
                     </td>
-                    <td>
+                    <td onclick="contentChange(3)">
                         <h5>Pistol</h5>
-                        <img src="Assets/Weapons/Bucky.png" alt="Classic">
+                        <img class="arsenalItem" src="Assets/Weapons/Bucky.png" alt="Classic">
+                        <p class="arsenalContent"></p>
                     </td>
                 </tr>
                 <tr class="Arsenal">
-                    <td>
+                    <td onclick="contentChange(4)">
                         <h5>Pistol</h5>
-                        <img src="Assets/Weapons/Ghost.png" alt="Classic">
+                        <img class="arsenalItem" src="Assets/Weapons/Ghost.png" alt="Classic">
+                        <p class="arsenalContent"></p>
                     </td>
-                    <td>
+                    <td onclick="contentChange(5)">
                         <h5>Pistol</h5>
-                        <img src="Assets/Weapons/Guardian.png" alt="Classic">
-                    </td>
-                </tr>
-                <tr class="Arsenal">
-                    <td>
-                        <h5>Pistol</h5>
-                        <img src="Assets/Weapons/Judge.png" alt="Classic">
-                    </td>
-                    <td>
-                        <h5>Pistol</h5>
-                        <img src="Assets/Weapons/Marshal.png" alt="Classic">
+                        <img class="arsenalItem" src="Assets/Weapons/Guardian.png" alt="Classic">
+                        <p class="arsenalContent"></p>
                     </td>
                 </tr>
                 <tr class="Arsenal">
-                    <td>
+                    <td onclick="contentChange(6)">
                         <h5>Pistol</h5>
-                        <img src="Assets/Weapons/Odin.png" alt="Classic">
+                        <img class="arsenalItem" src="Assets/Weapons/Judge.png" alt="Classic">
+                        <p class="arsenalContent"></p>
                     </td>
-                    <td>
+                    <td onclick="contentChange(7)">
                         <h5>Pistol</h5>
-                        <img src="Assets/Weapons/Operator.png" alt="Classic">
+                        <img class="arsenalItem" src="Assets/Weapons/Marshal.png" alt="Classic">
+                        <p class="arsenalContent"></p>
                     </td>
                 </tr>
                 <tr class="Arsenal">
-                    <td>
+                    <td onclick="contentChange(8)">
+                        <h5>Pistol</h5>
+                        <img class="arsenalItem" src="Assets/Weapons/Odin.png" alt="Classic">
+                        <p class="arsenalContent"></p>
+                    </td>
+                    <td onclick="contentChange(9)">
+                        <h5>Pistol</h5>
+                        <img class="arsenalItem" src="Assets/Weapons/Operator.png" alt="Classic">
+                        <p class="arsenalContent"></p>
+                    </td>
+                </tr>
+                <tr class="Arsenal">
+                    <td class="arsenalItem" onclick="contentChange(10)">
                         <h5>Pistol</h5>
                         <img src="Assets/Weapons/Phantom.png" alt="Classic">
+                        <p class="arsenalContent"></p>
                     </td>
-                    <td>
+                    <td onclick="contentChange(11)">
                         <h5>Pistol</h5>
-                        <img src="Assets/Weapons/Sheriff.png" alt="Classic">
+                        <img class="arsenalItem" src="Assets/Weapons/Sheriff.png" alt="Classic">
+                        <p class="arsenalContent"></p>
                     </td>
                 </tr>
                 <tr class="Arsenal">
-                    <td>
+                    <td onclick="contentChange(12)">
                         <h5>Pistol</h5>
-                        <img src="Assets/Weapons/Shorty.png" alt="Classic">
+                        <img class="arsenalItem" src="Assets/Weapons/Shorty.png" alt="Classic">
+                        <p class="arsenalContent"></p>
                     </td>
-                    <td>
+                    <td onclick="contentChange(13)">
                         <h5>Pistol</h5>
-                        <img src="Assets/Weapons/Stinger.png" alt="Classic">
+                        <img class="arsenalItem" src="Assets/Weapons/Stinger.png" alt="Classic">
+                        <p class="arsenalContent"></p>
                     </td>
                 </tr>
-                
             </table>
         </div>
 
@@ -127,7 +140,7 @@
         <hr style="width: 30%; border-top: 3px solid;" align="left">
         <div id="Economy">
             <h5 class="Info_Title titles">Economy</h5>
-            <p>It is dead</p>
+            <p></p>
         </div>
         
         <!--Match Up Section-->
