Fixed Anchor Jumps; Added Agent Sections

--- a/Agent_Tips.html
+++ b/Agent_Tips.html
@@ -33,24 +33,59 @@
         <hr class="titles">
         <div class="AgentsBase">
             <div class="Agents items">
-                <img src="Assets/role/Duelist.png" alt="Duelist">
-                <h5><a href="#">Duelist</a></h5>
+                <a href="#Duelist">
+                    <img src="Assets/role/Duelist.png" alt="Duelist">
+                    <h5>Duelist</h5>
+                </a>
             </div>
             <div class="Agents items">
-                <img src="Assets/role/Controller.png" alt="Controller">
-                <h5><a href="#">Controller</a></h5>
+                <a href="#Controller">
+                    <img src="Assets/role/Controller.png" alt="Controller">
+                    <h5>Controller</h5>
+                </a>
             </div>
             <div class="Agents items">
-                <img src="Assets/role/Sentinel.png" alt="Sentinel">
-                <h5><a href="#">Sentinal</a></h5>
+                <a href="#Sentinal">
+                    <img src="Assets/role/Sentinel.png" alt="Sentinel">
+                    <h5>Sentinal</h5>
+                </a>
             </div>
             <div class="Agents items">
-                <img src="Assets/role/Initiator.png" alt="Initiator">
-                <h5><a href="#">Initiator</a></h5>
+                <a href="#Initiator">
+                    <img src="Assets/role/Initiator.png" alt="Initiator">
+                    <h5>Initiator</h5>
+                </a>
             </div>
         </div>
         <hr style="width: 70%; border-top: 3px solid;">
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        
+        <!-- Duelist Section -->
+        <hr style="width: 70%; border-top: 3px solid;">
+        <div>
+            <h1 class="titles" id="Duelist">Duelist</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+
+        <!-- Controller Section -->
+        <hr style="width: 70%; border-top: 3px solid;">
+        <div>
+            <h1 class="titles" id="Controller">Controller</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+        <!-- Sentinal Section -->
+        <hr style="width: 70%; border-top: 3px solid;">
+        <div>
+            <h1 class="titles" id="Sentinal">Sentinal</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+        
+        <!-- Initiator Section -->
+        <hr style="width: 70%; border-top: 3px solid;">
+        <div id="Initiator">
+            <h1 class="titles">Initiator</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
     </body>
 
     <footer></footer>
