--- a/Basic_Information.html
+++ b/Basic_Information.html
@@ -132,6 +132,18 @@
                         <p class="arsenalContent"></p>
                     </td>
                 </tr>
+                <tr class="Arsenal">
+                    <td onclick="contentChange(14)">
+                        <h5>Classic</h5>
+                        <img class="arsenalItem" src="Assets/Weapons/Classic.png" alt="Classic">
+                        <p class="arsenalContent"></p>
+                    </td>
+                    <td onclick="contentChange(15)">
+                        <h5>Knife</h5>
+                        <img class="arsenalItem" src="Assets/Weapons/Classic.png" alt="Classic">
+                        <p class="arsenalContent"></p>
+                    </td>
+                </tr>
             </table>
         </div>
 
@@ -140,19 +152,21 @@
         <hr style="width: 30%; border-top: 3px solid;" align="left">
         <div id="Economy">
             <h5 class="Info_Title titles">Economy</h5>
-            <p></p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
         </div>
         
         <!--Match Up Section-->
         <hr style="width: 30%; border-top: 3px solid;" align="left">
         <div id="Match_Up">
             <h5 class="Info_Title titles">Match Up</h5>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
         </div>
 
         <!--Team Comp Section-->
         <hr style="width: 30%; border-top: 3px solid;" align="left">
         <div id="Team_Composition">
             <h5 class="Info_Title titles">Team Composition</h5>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
         </div>
     </body>
     
