--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -16,7 +16,8 @@
                     <a href="Basic_Information.html#Weapons">Weapons</a>
                     <a href="Basic_Information.html#Economy">Economy</a>
                     <a href="Basic_Information.html#Match_Up">Match Up</a>
-                    <a href="Basic_Information.html#Team_Composition">Team Composition</a>                </div>
+                    <a href="Basic_Information.html#Team_Composition">Team Composition</a>
+                </div>
             </div>
     
             <div class="nav"><a href="Agent_Tips.html">Agent Tips</a></div>
@@ -66,6 +67,26 @@
 
     </body>
 
-    <footer></footer>
-
+    <footer class="footer-clean">
+        <div class="container">
+            <h3>Explore</h3>
+            <a href="#">Home</a>
+            <a href="#">Basic Knowledge</a>
+            <a href="#">Agents</a>
+            <a href="#">Maps</a>
+            <a href="#">Patch Notes</a>
+        </div>
+        <div class="container">
+            <h3>Resources</h3>
+            <a href="#">Valorant</a>
+            <a href="#">Youtube</a>
+            <a href="#">Facebook</a>
+        </div>
+        <div class="container">
+            <h3>Contact Us</h3>
+            <a href="#">WhatsApp</a>
+            <a href="#">Instagram</a>
+            <a href="#">Facebook</a>
+        </div>
+    </footer>
 </html>
